# VideonatorGit

source/: CMakeLists.txt  build.sh  cmake_install.cmake  vc9-for-unity.cmd
source/TheoraPlayer/: CMakeLists.txt
source/TheoraPlayer/TheoraOgg/: CMakeLists.txt
source/TheoraPlayer/TheoraOgg/include/ogg/: config_types.h
source/TheoraPlayer/TheoraOgg/src/: bitwise.c
source/TheoraPlayer/TheoraTheora/: CMakeLists.txt
source/TheoraPlayer/TheoraTheora/include/theora/: theora.h  theoradec.h  theoraenc.h
source/TheoraPlayer/TheoraTheora/lib/: apiwrapper.h  decode.c  dequant.c  huffdec.c  huffenc.c  mathops.h  quant.c
source/TheoraPlayer/TheoraVorbis/: CMakeLists.txt
source/TheoraPlayer/TheoraVorbis/lib/: analysis.c  bitrate.c  block.c  codebook.c  codebook.h  envelope.c  floor0.c  floor1.c  info.c  mapping0.c  res0.c  sharedbook.c  synthesis.c
source/TheoraPlayer/src/: TheoraUtil.cpp
source/include/: JetdogsTheoraDataStream.h  JetdogsVideoExport.h  JetdogsVideoManager.h
source/src/: JetdogsTheoraDataStream.cpp  JetdogsVideoDLLmain.cpp  JetdogsVideoManager.cpp
